fix: frontend now  overflow isnt on body but on page container

--- a/frontend/src/components/lists/QuizzesList.css
+++ b/frontend/src/components/lists/QuizzesList.css
@@ -9,6 +9,7 @@
   border-radius: 6px;
   overflow: hidden;
   margin: auto;
+  margin-bottom: 1em;
 }
 
 h3{
