--- a/frontend/src/pages/MainPage.css
+++ b/frontend/src/pages/MainPage.css
@@ -3,31 +3,9 @@
   width: 100vw;
   background-color: #f5f7fa;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
-/* 
-.navbar {
-  display: flex;
-  background-color: #007bff;
+.recent-quizzes{
+  overflow-y: auto;
 }
-
-.navbar button {
-  flex: 1;
-  padding: 1rem;
-  background-color: #007bff;
-  border: none;
-  color: white;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.2s ease;
-  border-radius: 0;
-}
-
-.navbar button:hover {
-  background-color: #0056b3;
-}
-
-.main-content {
-  padding: 2rem;
-  text-align: center;
-} */
