--- a/frontend/src/pages/MyQuizzesPage.css
+++ b/frontend/src/pages/MyQuizzesPage.css
@@ -15,4 +15,8 @@
     margin-top: 1rem;
 }
 
+.myquizzes-body{
+    overflow-y: auto;
+}
+
 
